# tmp-mail

./: Cargo.toml  README.md
src/: main.rs
