[package]
name = "tmp-mail"
version = "0.1.0"
authors = ["AAO <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.10", features = ["blocking"] }
tokio = "1.8.4"
